--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button onclick="downloadImage('webp')">دانلود WebP</a>
             </div>
         </div>
-        <p>برای استفاده از این تصویر به عنوان استیکر،<br /> روی «دانلود WebP» کلیک کنید و تصویر را در ایتا به صورت فایل ارسال کید.</p>
+        <p>برای استفاده از این تصویر به عنوان استیکر،<br /> روی «دانلود WebP» کلیک کنید و تصویر را در پیامرسان به صورت فایل ارسال کید.</p>
     </div>
 
     <div class="canvas">
